--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,20 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  p #{title}
+  div(class="row")
+    div(class="panel panel-default col", style="width: 250px")
+      div(class="panel-heading")
+        h4 Earnings
+      div(class="panel-body")
+        h5 #{salary}
+    div(class="panel panel-default col", style="width: 250px")
+      div(class="panel-heading")
+        h4 Expenditure
+      div(class="panel-body")
+        h5 #{expense}
+    div(class="panel panel-default col", style="width: 250px")
+      div(class="panel-heading")
+        h4 Savings
+      div(class="panel-body")
+        h5 #{savings}
