--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -14,11 +14,11 @@ html
                   img.logo#logo(src="images/Budget.png" width="175" height="74" alt="" title="")
                 ul(class="navigation")
                   li 
-                    a Home
+                    #[a(href='/Home') Home]
                   li
-                    a About
+                    #[a(href='/Salary') Salary]
                   li
-                    a Contact Us
+                    #[a(href='/Expense') Expense]
               div(id="content")
                 div(class="content")
                   ul
